kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP

  selector:
    app: ecom-frontend

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
